💒👵 Checkpoint ./script.js:19921051/156 ./index.html:19921051/322 ./style.css:19921051/269

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <script src="/script.js" defer></script>
   </head>  
   <body>
-  <h1>Name of Your Quiz</h1>
+  <h1>Take this quiz and find out what sibling order you are most like!</h1>
   
-    <h2>Your First Question</h2>
+    <h2>Your flight going home just got canceled. What do you do?</h2>
     <div class="question">
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
@@ -39,7 +39,7 @@
       </div>
     </div> 
     
-    <h2>Your Second Question</h2>
+    <h2>You are planning a picnic for your friends. What do you bring?</h2>
     <div class="question">
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
@@ -63,7 +63,7 @@
       </div>
     </div> 
     
-    <h2>Your Third Question</h2>
+    <h2>Your car breaks down in the middle of the road. What do you do?</h2>
     <div class="question">
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
