💰💓 Checkpoint ./index.html:19921051/177 ./script.js:19921051/1219

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Personality Quiz Starter Code</title>
+    <title>Personality Quiz</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -87,7 +87,7 @@
       </div>
     </div>
     
-    <h2>Your Fourth Question</h2>
+    <h2>Your boat crashes, leaving you stranded on an island. What do you do?</h2>
     <div class="question">
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
@@ -111,7 +111,7 @@
       </div>
     </div> 
 
-    <h2>Your Fifth Question</h2>
+    <h2>You have an assignment due next week. When do you do it?</h2>
     <div class="question">
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
