👵📠 Checkpoint ./index.html:19921051/34 ./style.css:19921051/520

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <script src="/script.js" defer></script>
   </head>  
   <body>
-  <h1>Take this quiz and find out what sibling order you are most like!</h1>
-  
+    <nav>
+      <h1>Take this quiz and find out what sibling order you are most like!</h1>
+    </nav>
     <h2>Your flight going home just got canceled. What do you do?</h2>
     <div class="question">
       <div class="answer-choice">
