--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
     
     <div class="result">
       <h2 id="result">Your result is... </h2>
+      <button id="restart">Restart</button>
     </div>
   </body>
 </html>
