--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
     </div> 
     
-    <h2>You are planning a picnic for your friends. What do you bring?</h2>
+    <h2>You are planning a picnic with your friends. What do you do?</h2>
     <div class="question">
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
