🎾🌎 Checkpoint ./index.html:19921051/696 ./style.css:19921051/422 ./script.js:19921051/41

--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
         <br>
-        <button id="q1a1">Question 1 Answer Choice 1</button>
+        <button id="q1a1">Immediately book the next flight</button>
       </div>
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
         <br>
-        <button id="q1a2">Question 1 Answer Choice 2</button>
+        <button id="q1a2">Wait around and hope for the best</button>
       </div>
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
         <br>
-        <button id="q1a3">Question 1 Answer Choice 3</button>
+        <button id="q1a3">Stay on vacation longer</button>
       </div>
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
         <br>
-        <button id="q1a4">Question 1 Answer Choice 4</button>
+        <button id="q1a4">Demand to speak with the head of the airline company</button>
       </div>
     </div> 
     
@@ -45,22 +45,22 @@
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
         <br>
-        <button id="q2a1">Question 2 Answer Choice 1</button>
+        <button id="q2a1">Plan the location and bring food for everyone</button>
       </div>
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
         <br>
-        <button id="q2a2">Question 2 Answer Choice 2</button>
+        <button id="q2a2">Bring some snacks and hope no one is allergic to them</button>
       </div>
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
         <br>
-        <button id="q2a3">Question 2 Answer Choice 3</button>
+        <button id="q2a3">Just bring yourself</button>
       </div>
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
         <br>
-        <button id="q2a4">Question 2 Answer Choice 4</button>
+        <button id="q2a4">Just bring food for yourself</button>
       </div>
     </div> 
     
@@ -69,12 +69,12 @@
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
         <br>
-        <button id="q3a1">Question 3 Answer Choice 1</button>
+        <button id="q3a1">Do it right away</button>
       </div>
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
         <br>
-        <button id="q3a2">Question 3 Answer Choice 2</button>
+        <button id="q3a2">Do it gradually throughout the week</button>
       </div>
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
