--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
     <h2>Your flight going home just got canceled. What do you do?</h2>
     <div class="question">
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fairport-people-in-the-airport-check-inn.jpg?v=1596648866385">
         <br>
         <button id="q1a1">Immediately book the next flight</button>
       </div>
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fairport-lounge.jpg?v=1596648877989">
         <br>
         <button id="q1a2">Wait around and hope for the best</button>
       </div>
@@ -199,7 +199,7 @@
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
         <br>
-        <button id="q8a3">QAnyone who will pick a fight</button>
+        <button id="q8a3">Anyone who will pick a fight</button>
       </div>
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
