🎲🎹 Checkpoint ./.glitch-assets:19921051/749 ./index.html:19921051/397 ./style.css:19921051/74

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         <button id="q1a2">Wait around and hope for the best</button>
       </div>
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2FSki-Towns.jpg?v=1596649318601">
         <br>
         <button id="q1a3">Stay on vacation longer</button>
       </div>
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2FBB14Ltdo.jpg?v=1596649245797">
         <br>
         <button id="q1a4">Demand to speak with the head of the airline company</button>
       </div>
