--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     </div> 
     
     <div class="result">
-      <h2 id="result">Your result is... </h2>
+      <h2>Your result is ...<h2 id="result"></h2></h2>
       <button id="restart">Restart</button>
     </div>
   </body>
