🛰🍕 Checkpoint ./index.html:19921051/38 ./script.js:19921051/185

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h2>Your flight going home just got canceled. What do you do?</h2>
     <div class="question">
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fairport-people-in-the-airport-check-inn.jpg?v=1596648866385">
+        <img id="plane" src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fairport-people-in-the-airport-check-inn.jpg?v=1596648866385">
         <br>
         <button id="q1a1">Immediately book the next flight</button>
       </div>
@@ -210,7 +210,7 @@
     
     <div class="result">
       <h2>Your result is ...<h3 id="result"></h3></h2>
-      <button id="restart">Restart</button>
+      <a href="#top"><button id="restart">Restart</button></a>
     </div>
   </body>
 </html>
