🏭🍗 Checkpoint ./index.html:19921051/34

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         <img id="plane" src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fairport-people-in-the-airport-check-inn.jpg?v=1596648866385">
         <br>
         <!--is the jump too agressive-->
-        <a href="#two"><button id="q1a1">Immediately book the next flight</button></a>
+        <!--<a href="#two">-->
+          <button id="q1a1">Immediately book the next flight</button>
+        <!--</a>-->
       </div>
       <div class="answer-choice">
         <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fairport-lounge.jpg?v=1596648877989">
