--- a/index.html
+++ b/index.html
@@ -29,17 +29,23 @@
       <div class="answer-choice">
         <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fairport-lounge.jpg?v=1596648877989">
         <br>
-        <button id="q1a2">Wait around and hope for the best</button>
+        <a href="#two">
+          <button id="q1a2">Wait around and hope for the best</button>
+        </a>
       </div>
       <div class="answer-choice">
         <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2FSki-Towns.jpg?v=1596649318601">
         <br>
-        <button id="q1a3">Stay on vacation longer</button>
+        <a href="#two">
+          <button id="q1a3">Stay on vacation longer</button>
+        </a>
       </div>
       <div class="answer-choice">
         <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2FBB14Ltdo.jpg?v=1596649245797">
         <br>
-        <button id="q1a4">Demand to speak with the head of the airline company</button>
+        <a href="#two">
+          <button id="q1a4">Demand to speak with the head of the airline company</button>
+        </a>
       </div>
     </div> 
     
@@ -48,22 +54,30 @@
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
         <br>
-        <button id="q2a1">Plan the location and bring food for everyone</button>
+        <a href="#three">
+          <button id="q2a1">Plan the location and bring food for everyone</button>
+        </a>
       </div>
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
         <br>
-        <button id="q2a2">Bring some snacks and hope no one is allergic to them</button>
+        <a href="#three">
+          <button id="q2a2">Bring some snacks and hope no one is allergic to them</button>
+        </a>
       </div>
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
         <br>
-        <button id="q2a3">Just bring yourself</button>
+        <a href="#three">
+          <button id="q2a3">Just bring yourself</button>
+        </a>
       </div>
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
         <br>
+        <a href="#three">
         <button id="q2a4">Just bring food for yourself</button>
+        </a>
       </div>
     </div> 
     
