🚏💍 Checkpoint ./index.html:19921051/52 ./script.js:19921051/5

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <br>
         <!--is the jump too agressive-->
         <a href="#two">
-          <button id="q1a1" class="old" onclick="oldestOpacity">Immediately book the next flight</button>
+          <button id="q1a1" class="old">Immediately book the next flight</button>
         </a>
       </div>
       <div class="answer-choice">
