🎂🎗 Checkpoint ./index.html:19921051/68 ./script.js:19921051/96

--- a/index.html
+++ b/index.html
@@ -23,28 +23,28 @@
         <br>
         <!--is the jump too agressive-->
         <a href="#two">
-          <button id="q1a1" class="old">Immediately book the next flight</button>
+          <button id="q1a1" class="old button">Immediately book the next flight</button>
         </a>
       </div>
       <div class="answer-choice">
         <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fairport-lounge.jpg?v=1596648877989">
         <br>
         <a href="#two">
-          <button id="q1a2" class="middle">Wait around and hope for the best</button>
+          <button id="q1a2" class="middle button">Wait around and hope for the best</button>
         </a>
       </div>
       <div class="answer-choice">
         <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2FSki-Towns.jpg?v=1596649318601">
         <br>
         <a href="#two">
-          <button id="q1a3" class="young">Stay on vacation longer</button>
+          <button id="q1a3" class="young button">Stay on vacation longer</button>
         </a>
       </div>
       <div class="answer-choice">
         <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2FBB14Ltdo.jpg?v=1596649245797">
         <br>
         <a href="#two">
-          <button id="q1a4" class="only">Demand to speak with the head of the airline company</button>
+          <button id="q1a4" class="only button">Demand to speak with the head of the airline company</button>
         </a>
       </div>
     </div> 
