🖼👩 Checkpoint ./script.js:19921051/58 ./style.css:19921051/1 ./index.html:19921051/92

--- a/index.html
+++ b/index.html
@@ -55,28 +55,28 @@
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
         <br>
         <a href="#three">
-          <button id="q2a1" class="old">Plan the location and bring food for everyone</button>
+          <button id="q2a1" class="button old">Plan the location and bring food for everyone</button>
         </a>
       </div>
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
         <br>
         <a href="#three">
-          <button id="q2a2" class="middle">Bring some snacks and hope no one is allergic to them</button>
+          <button id="q2a2" class="button middle">Bring some snacks and hope no one is allergic to them</button>
         </a>
       </div>
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
         <br>
         <a href="#three">
-          <button id="q2a3" class="young">Just bring yourself</button>
+          <button id="q2a3" class="button young">Just bring yourself</button>
         </a>
       </div>
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
         <br>
         <a href="#three">
-        <button id="q2a4" class="only">Just bring food for yourself</button>
+        <button id="q2a4" class="button only">Just bring food for yourself</button>
         </a>
       </div>
     </div> 
@@ -86,22 +86,22 @@
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
         <br>
-        <button id="q3a1">Do it right away</button>
+        <button id="q3a1" class="button">Do it right away</button>
       </div>
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
         <br>
-        <button id="q3a2">Do it gradually throughout the week</button>
+        <button id="q3a2" class="button">Do it gradually throughout the week</button>
       </div>
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
         <br>
-        <button id="q3a3">Do it the night before it is due</button>
+        <button id="q3a3" class="button">Do it the night before it is due</button>
       </div>
       <div class="answer-choice">
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
         <br>
-        <button id="q3a4">Hire a tutor to do it for you</button>
+        <button id="q3a4" class="button">Hire a tutor to do it for you</button>
       </div>
     </div>
     
