🚠👫 Checkpoint ./script.js:19921051/50 ./.glitch-assets:19921051/2029 ./index.html:19921051/305

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <h2 id="two">You are planning a picnic with your friends. What do you do?</h2>
     <div class="question">
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="hhttps://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fsuite-one-studio-beach-labor-day-picnic-grocery-store-trader-joes-cheese-plate_17742816-78c6-454d-966b-987b6823a0c2.webp?v=1596749509057">
         <br>
         <a href="#three">
           <button id="q2a1" class="button old">Plan the location and bring food for everyone</button>
