❤️👬 Checkpoint ./index.html:19921051/2395 ./.glitch-assets:19921051/2352

--- a/index.html
+++ b/index.html
@@ -52,28 +52,28 @@
     <h2 id="two">You are planning a picnic with your friends. What do you do?</h2>
     <div class="question">
       <div class="answer-choice">
-        <img src="hhttps://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fsuite-one-studio-beach-labor-day-picnic-grocery-store-trader-joes-cheese-plate_17742816-78c6-454d-966b-987b6823a0c2.webp?v=1596749509057">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fsuite-one-studio-beach-labor-day-picnic-grocery-store-trader-joes-cheese-plate_17742816-78c6-454d-966b-987b6823a0c2.webp?v=1596749509057">
         <br>
         <a href="#three">
           <button id="q2a1" class="button old">Plan the location and bring food for everyone</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fk2-_7ef9c621-2fb3-442e-8de2-e97e7370bf40.v1.jpg?v=1596749552287">
         <br>
         <a href="#three">
           <button id="q2a2" class="button middle">Bring some snacks and hope no one is allergic to them</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fman-walking-on-grass-field.jpg?v=1596749644811">
         <br>
         <a href="#three">
           <button id="q2a3" class="button young">Just bring yourself</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Ffocused_151385740-stock-photo-oung-man-carrying-picnic-basket.jpg?v=1596749963594">
         <br>
         <a href="#three">
           <button id="q2a4" class="button only">Just bring food for yourself</button>
@@ -84,28 +84,28 @@
     <h2 id="three">You have an assignment due next week. When do you do it?</h2>
     <div class="question">
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fshutterstock_85447984-1024x683.jpg?v=1596750235172">
         <br>
         <a href="#four">
           <button id="q3a1" class="button">Do it right away</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fab07f091-ff08-4efe-bc74-214f8b4f2574.webp?v=1596750239040">
         <br>
         <a href="#four">
           <button id="q3a2" class="button">Do it gradually throughout the week</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fperson-working-at-night.webp?v=1596750130491">
         <br>
         <a href="#four">
           <button id="q3a3" class="button">Do it the night before it is due</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fb58c8475-e485-40ef-bc82-c474b8192315.webp?v=1596750125083">
         <br>
         <a href="#four">
           <button id="q3a4" class="button">Hire a tutor to do it for you</button>
@@ -236,7 +236,7 @@
         <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
         <br>
         <a href="#eight">
-          <button id="q7a4" class="button">Do you part, but nothing more</button>
+        <button id="q7a4" class="button">Do you part, but nothing more</button>
         </a>
       </div>
     </div> 
