🚵🎓 Checkpoint ./.glitch-assets:19921051/5095 ./index.html:19921051/2556

--- a/index.html
+++ b/index.html
@@ -116,28 +116,28 @@
     <h2 id="four">Your boat crashes, leaving you stranded on an island. What do you do?</h2>
     <div class="question">
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Funnamed.jpg?v=1596750599170">
         <br>
         <a href="#five">
           <button id="q4a1" class="button">Find food, shelter, and come up with a plan to get off the island</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fdiy13180400316.jpg?v=1596750599997">
         <br>
         <a href="#five">
           <button id="q4a2" class="button">Sit and hope an airplane or boat finds you</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fhow_to_build_a_survival_shelter_1024x1024.webp?v=1596750601573">
         <br>
         <a href="#five">
           <button id="q4a3" class="button">Build a shelter and plan to live there</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2F11.jpg?v=1596750602874">
         <br>
         <a href="#five">
           <button id="q4a4" class="button">Give up on life and cry</button>
@@ -148,28 +148,28 @@
     <h2 id="five">You want to go to your friends house, but your parents will not let you. What do you do?</h2>
     <div class="question">
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Factive-listening-teenagersnarrow.jpg?v=1596750927218">
         <br>
         <a href="#six">
           <button id="q5a1" class="button">Listen to what your parents say and stay home</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fteen-on-laptop-.jpg?v=1596750928385">
         <br>
         <a href="#six">
           <button id="q5a2" class="button">Make different plans but do not tell your parents</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fsneakingout.jpg?v=1596750930465">
         <br>
         <a href="#six">
           <button id="q5a3" class="button">Sneak out to friend's house</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2F140768132_HighRes-56a6f3b45f9b58b7d0e5a876.jpg?v=1596750928600">
         <br>
         <a href="#six">
           <button id="q5a4" class="button">Invite your friend over to your house</button>
@@ -180,28 +180,28 @@
      <h2 id="six">Your car breaks down in the middle of the road. What do you do?</h2>
     <div class="question">
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fpreview.jpg?v=1596751124613">
         <br>
         <a href="#seven">
           <button id="q6a1" class="button">Immediately call for help</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fsafety-serve-article-higway-breakdown.jpg?v=1596751124894">
         <br>
         <a href="#seven">
           <button id="q6a2" class="button">Try to fix it yourself and then call for help</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fauto-repair-47-300x177.jpg?v=1596751125599">
         <br>
         <a href="#seven">
           <button id="q6a3" class="button">Fix it yourself</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fyoung-man-sitting-inside-his-260nw-588285353.webp?v=1596751126721">
         <br>
         <a href="#seven">
           <button id="q6a4" class="button">Sit in your car upset and cry</button>
