🐋🏨 Checkpoint ./.glitch-assets:19921051/626 ./index.html:19921051/299

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         </a>
       </div>
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fyoung-man-sitting-inside-his-260nw-588285353.webp?v=1596751126721">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fyoung-man-sitting-car-very-upset-stressed-after-hard-failure-moving-traffic-jam_231208-854.jpg?v=1596751229936">
         <br>
         <a href="#seven">
           <button id="q6a4" class="button">Sit in your car upset and cry</button>
