😼🏣 Checkpoint ./.glitch-assets:19921051/2166 ./index.html:19921051/1772

--- a/index.html
+++ b/index.html
@@ -212,28 +212,28 @@
     <h2 id="seven">You are in a group project. What role do you take?</h2>
     <div class="question">
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fthe-5-students-you-meet-in-group-projects.jpg?v=1596759435494">
         <br>
         <a href="#eight">
           <button id="q7a1" class="button">Take charge of the entire project</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fteenager-working-at-desk-in-bedroom.jpg?v=1596759430548">
         <br>
         <a href="#eight">
           <button id="q7a2" class="button">Do all the work</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fteen-computer-online-cyber-bullyingiStock_000052917246_Medium.jpg?v=1596759432875">
         <br>
         <a href="#eight">
           <button id="q7a3" class="button">Do your work at the very last minute</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2F89461881-young-asian-businesswoman-yawning-while-working-with-laptop-computer-at-office-woman-in-casual-offic.jpg?v=1596759433305">
         <br>
         <a href="#eight">
         <button id="q7a4" class="button">Do you part, but nothing more</button>
