🏨⛄️ Checkpoint ./.glitch-assets:19921051/2189 ./index.html:19921051/1360

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <h2 id="one">Your flight going home just got canceled. What do you do?</h2>
     <div class="question">
       <div class="answer-choice">
-        <img id="plane" src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fairport-people-in-the-airport-check-inn.jpg?v=1596648866385">
+        <img id="plane" src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fairport-people-in-the-airport-check-inn.jpg?v=1596648866385" alt="Person booking flight">
         <br>
         <!--is the jump too agressive-->
         <a href="#two">
@@ -27,21 +27,21 @@
         </a>
       </div>
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fairport-lounge.jpg?v=1596648877989">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fairport-lounge.jpg?v=1596648877989" alt="Person waiting in the airport">
         <br>
         <a href="#two">
           <button id="q1a2" class="button middle Q1">Wait around and hope for the best</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2FSki-Towns.jpg?v=1596649318601">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2FSki-Towns.jpg?v=1596649318601" alt="Person skiing down a mountain">
         <br>
         <a href="#two">
           <button id="q1a3" class="button young Q1">Stay on vacation longer</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2FBB14Ltdo.jpg?v=1596649245797">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2FBB14Ltdo.jpg?v=1596649245797" alt="Person talking with a flight worker">
         <br>
         <a href="#two">
           <button id="q1a4" class="button only Q1">Demand to speak with the head of the airline company</button>
@@ -52,28 +52,28 @@
     <h2 id="two">You are planning a picnic with your friends. What do you do?</h2>
     <div class="question">
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fsuite-one-studio-beach-labor-day-picnic-grocery-store-trader-joes-cheese-plate_17742816-78c6-454d-966b-987b6823a0c2.webp?v=1596749509057">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fsuite-one-studio-beach-labor-day-picnic-grocery-store-trader-joes-cheese-plate_17742816-78c6-454d-966b-987b6823a0c2.webp?v=1596749509057" alt="Picnic at the beach">
         <br>
         <a href="#three">
           <button id="q2a1" class="button old">Plan the location and bring food for everyone</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fk2-_7ef9c621-2fb3-442e-8de2-e97e7370bf40.v1.jpg?v=1596749552287">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fk2-_7ef9c621-2fb3-442e-8de2-e97e7370bf40.v1.jpg?v=1596749552287" alt="Snacks">
         <br>
         <a href="#three">
           <button id="q2a2" class="button middle">Bring some snacks and hope no one is allergic to them</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fman-walking-on-grass-field.jpg?v=1596749644811">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fman-walking-on-grass-field.jpg?v=1596749644811" alt="Person walking into the sunset">
         <br>
         <a href="#three">
           <button id="q2a3" class="button young">Just bring yourself</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Ffocused_151385740-stock-photo-oung-man-carrying-picnic-basket.jpg?v=1596749963594">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Ffocused_151385740-stock-photo-oung-man-carrying-picnic-basket.jpg?v=1596749963594" alt="">
         <br>
         <a href="#three">
           <button id="q2a4" class="button only">Just bring food for yourself</button>
@@ -244,22 +244,22 @@
     <h2 id="eight">You get in a big fight with a family member. Who is it with?</h2>
     <div class="question">
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fsisters-fighting.jpg?v=1596763602854">
         <br>
         <button id="q8a1" class="button">Your sibling(s)</button>
       </div>
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2F212516-2121x1414-Sisters-hugging-and-laughing.jpg?v=1596763160042">
         <br>
         <button id="q8a2" class="button">No fight, you are the peacemaker</button>
       </div>
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2FFamily-Fighting.jpg?v=1596763161028">
         <br>
         <button id="q8a3" class="button">Anyone who will pick a fight</button>
       </div>
       <div class="answer-choice">
-        <img src="http://static.parastorage.com/services/wixapps/2.486.0/javascript/wixapps/apps/blog/images/no-image-icon.png">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fparenting-fighting-istock-6-7-17.jpg?v=1596763160590">
         <br>
         <button id="q8a4" class="button">Your parents</button>
       </div>
