--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </a>
       </div>
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Ffocused_151385740-stock-photo-oung-man-carrying-picnic-basket.jpg?v=1596749963594" alt="">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Ffocused_151385740-stock-photo-oung-man-carrying-picnic-basket.jpg?v=1596749963594" alt="Person walking with a picnic basket">
         <br>
         <a href="#three">
           <button id="q2a4" class="button only">Just bring food for yourself</button>
@@ -84,28 +84,28 @@
     <h2 id="three">You have an assignment due next week. When do you do it?</h2>
     <div class="question">
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fshutterstock_85447984-1024x683.jpg?v=1596750235172">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fshutterstock_85447984-1024x683.jpg?v=1596750235172" alt="Person working on an assingment">
         <br>
         <a href="#four">
           <button id="q3a1" class="button">Do it right away</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fab07f091-ff08-4efe-bc74-214f8b4f2574.webp?v=1596750239040">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fab07f091-ff08-4efe-bc74-214f8b4f2574.webp?v=1596750239040" alt="Person working at home at a desk">
         <br>
         <a href="#four">
           <button id="q3a2" class="button">Do it gradually throughout the week</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fperson-working-at-night.webp?v=1596750130491">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fperson-working-at-night.webp?v=1596750130491" alt="Person working at night at a desk">
         <br>
         <a href="#four">
           <button id="q3a3" class="button">Do it the night before it is due</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fb58c8475-e485-40ef-bc82-c474b8192315.webp?v=1596750125083">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fb58c8475-e485-40ef-bc82-c474b8192315.webp?v=1596750125083" alt="Person getting help from a tutor">
         <br>
         <a href="#four">
           <button id="q3a4" class="button">Hire a tutor to do it for you</button>
@@ -116,28 +116,28 @@
     <h2 id="four">Your boat crashes, leaving you stranded on an island. What do you do?</h2>
     <div class="question">
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Funnamed.jpg?v=1596750599170">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Funnamed.jpg?v=1596750599170" alt="Person climbing a coconut tree">
         <br>
         <a href="#five">
           <button id="q4a1" class="button">Find food, shelter, and come up with a plan to get off the island</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fdiy13180400316.jpg?v=1596750599997">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fdiy13180400316.jpg?v=1596750599997" alt="Person sitting on a beach">
         <br>
         <a href="#five">
           <button id="q4a2" class="button">Sit and hope an airplane or boat finds you</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fhow_to_build_a_survival_shelter_1024x1024.webp?v=1596750601573">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fhow_to_build_a_survival_shelter_1024x1024.webp?v=1596750601573" alt="A shelter made of sticks">
         <br>
         <a href="#five">
           <button id="q4a3" class="button">Build a shelter and plan to live there</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2F11.jpg?v=1596750602874">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2F11.jpg?v=1596750602874" alt="Person crying on a beach">
         <br>
         <a href="#five">
           <button id="q4a4" class="button">Give up on life and cry</button>
@@ -148,28 +148,28 @@
     <h2 id="five">You want to go to your friends house, but your parents will not let you. What do you do?</h2>
     <div class="question">
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Factive-listening-teenagersnarrow.jpg?v=1596750927218">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Factive-listening-teenagersnarrow.jpg?v=1596750927218" alt="Person talking with a parent">
         <br>
         <a href="#six">
           <button id="q5a1" class="button">Listen to what your parents say and stay home</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fteen-on-laptop-.jpg?v=1596750928385">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fteen-on-laptop-.jpg?v=1596750928385" alt="Person on their laptop making plans">
         <br>
         <a href="#six">
           <button id="q5a2" class="button">Make different plans but do not tell your parents</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fsneakingout.jpg?v=1596750930465">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fsneakingout.jpg?v=1596750930465" alt="Person climbing out of a window">
         <br>
         <a href="#six">
           <button id="q5a3" class="button">Sneak out to friend's house</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2F140768132_HighRes-56a6f3b45f9b58b7d0e5a876.jpg?v=1596750928600">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2F140768132_HighRes-56a6f3b45f9b58b7d0e5a876.jpg?v=1596750928600" alt="Person talking with a friend">
         <br>
         <a href="#six">
           <button id="q5a4" class="button">Invite your friend over to your house</button>
@@ -180,28 +180,28 @@
      <h2 id="six">Your car breaks down in the middle of the road. What do you do?</h2>
     <div class="question">
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fpreview.jpg?v=1596751124613">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fpreview.jpg?v=1596751124613" alt="Person sitting by broken down car">
         <br>
         <a href="#seven">
           <button id="q6a1" class="button">Immediately call for help</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fsafety-serve-article-higway-breakdown.jpg?v=1596751124894">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fsafety-serve-article-higway-breakdown.jpg?v=1596751124894" alt="Person trying to fix a car">
         <br>
         <a href="#seven">
           <button id="q6a2" class="button">Try to fix it yourself and then call for help</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fauto-repair-47-300x177.jpg?v=1596751125599">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fauto-repair-47-300x177.jpg?v=1596751125599" alt="Person trying to fix a car">
         <br>
         <a href="#seven">
           <button id="q6a3" class="button">Fix it yourself</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fyoung-man-sitting-car-very-upset-stressed-after-hard-failure-moving-traffic-jam_231208-854.jpg?v=1596751229936">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fyoung-man-sitting-car-very-upset-stressed-after-hard-failure-moving-traffic-jam_231208-854.jpg?v=1596751229936" alt="Person upset in a car">
         <br>
         <a href="#seven">
           <button id="q6a4" class="button">Sit in your car upset and cry</button>
@@ -212,28 +212,28 @@
     <h2 id="seven">You are in a group project. What role do you take?</h2>
     <div class="question">
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fthe-5-students-you-meet-in-group-projects.jpg?v=1596759435494">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fthe-5-students-you-meet-in-group-projects.jpg?v=1596759435494" alt="A group of people working on a project">
         <br>
         <a href="#eight">
           <button id="q7a1" class="button">Take charge of the entire project</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fteenager-working-at-desk-in-bedroom.jpg?v=1596759430548">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fteenager-working-at-desk-in-bedroom.jpg?v=1596759430548" alt="Person doing work at a desk">
         <br>
         <a href="#eight">
           <button id="q7a2" class="button">Do all the work</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fteen-computer-online-cyber-bullyingiStock_000052917246_Medium.jpg?v=1596759432875">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fteen-computer-online-cyber-bullyingiStock_000052917246_Medium.jpg?v=1596759432875" alt="Person working at night">
         <br>
         <a href="#eight">
           <button id="q7a3" class="button">Do your work at the very last minute</button>
         </a>
       </div>
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2F89461881-young-asian-businesswoman-yawning-while-working-with-laptop-computer-at-office-woman-in-casual-offic.jpg?v=1596759433305">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2F89461881-young-asian-businesswoman-yawning-while-working-with-laptop-computer-at-office-woman-in-casual-offic.jpg?v=1596759433305" alt="Person yawning while doing work">
         <br>
         <a href="#eight">
         <button id="q7a4" class="button">Do you part, but nothing more</button>
@@ -244,22 +244,22 @@
     <h2 id="eight">You get in a big fight with a family member. Who is it with?</h2>
     <div class="question">
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fsisters-fighting.jpg?v=1596763602854">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fsisters-fighting.jpg?v=1596763602854" alt="Person fighting with sibling">
         <br>
         <button id="q8a1" class="button">Your sibling(s)</button>
       </div>
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2F212516-2121x1414-Sisters-hugging-and-laughing.jpg?v=1596763160042">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2F212516-2121x1414-Sisters-hugging-and-laughing.jpg?v=1596763160042" alt="Person happy with sibling">
         <br>
         <button id="q8a2" class="button">No fight, you are the peacemaker</button>
       </div>
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2FFamily-Fighting.jpg?v=1596763161028">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2FFamily-Fighting.jpg?v=1596763161028" alt="A family fighting at the table">
         <br>
         <button id="q8a3" class="button">Anyone who will pick a fight</button>
       </div>
       <div class="answer-choice">
-        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fparenting-fighting-istock-6-7-17.jpg?v=1596763160590">
+        <img src="https://cdn.glitch.com/71b0cfeb-0817-4d91-8b8d-b6b0f0431feb%2Fparenting-fighting-istock-6-7-17.jpg?v=1596763160590" alt="A child fighting with their parents">
         <br>
         <button id="q8a4" class="button">Your parents</button>
       </div>
